; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_control.c_test_for.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_control.c_test_for.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_for to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_for() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %13, %0
  %7 = load i32, i32* %1, align 4
  %8 = icmp slt i32 %7, 5
  br i1 %8, label %9, label %16

9:                                                ; preds = %6
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %10, %11
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %9
  %14 = load i32, i32* %1, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %1, align 4
  br label %6

16:                                               ; preds = %6
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @expect(i32 10, i32 %17)
  store i32 0, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %26, %16
  %20 = load i32, i32* %1, align 4
  %21 = icmp slt i32 %20, 5
  br i1 %21, label %22, label %29

22:                                               ; preds = %19
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* %1, align 4
  %25 = add nsw i32 %23, %24
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %22
  %27 = load i32, i32* %1, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %1, align 4
  br label %19

29:                                               ; preds = %19
  %30 = load i32, i32* %2, align 4
  %31 = call i32 @expect(i32 10, i32 %30)
  store i32 0, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %32

32:                                               ; preds = %47, %29
  %33 = load i32, i32* %1, align 4
  %34 = icmp slt i32 %33, 100
  br i1 %34, label %35, label %50

35:                                               ; preds = %32
  %36 = load i32, i32* %1, align 4
  %37 = icmp slt i32 %36, 5
  br i1 %37, label %38, label %39

38:                                               ; preds = %35
  br label %47

39:                                               ; preds = %35
  %40 = load i32, i32* %1, align 4
  %41 = icmp eq i32 %40, 9
  br i1 %41, label %42, label %43

42:                                               ; preds = %39
  br label %50

43:                                               ; preds = %39
  %44 = load i32, i32* %1, align 4
  %45 = load i32, i32* %2, align 4
  %46 = add nsw i32 %45, %44
  store i32 %46, i32* %2, align 4
  br label %47

47:                                               ; preds = %43, %38
  %48 = load i32, i32* %1, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %1, align 4
  br label %32

50:                                               ; preds = %42, %32
  %51 = load i32, i32* %2, align 4
  %52 = call i32 @expect(i32 26, i32 %51)
  store i32 3, i32* %3, align 4
  store i32 5, i32* %4, align 4
  store i32 8, i32* %5, align 4
  br label %53

53:                                               ; preds = %62, %50
  %54 = load i32, i32* %3, align 4
  %55 = icmp slt i32 %54, 100
  br i1 %55, label %56, label %69

56:                                               ; preds = %53
  %57 = load i32, i32* %5, align 4
  %58 = load i32, i32* %3, align 4
  %59 = load i32, i32* %4, align 4
  %60 = add nsw i32 %58, %59
  %61 = call i32 @expect(i32 %57, i32 %60)
  br label %62

62:                                               ; preds = %56
  %63 = load i32, i32* %3, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %3, align 4
  %65 = load i32, i32* %4, align 4
  %66 = add nsw i32 %65, 1
  store i32 %66, i32* %4, align 4
  %67 = load i32, i32* %5, align 4
  %68 = add nsw i32 %67, 2
  store i32 %68, i32* %5, align 4
  br label %53

69:                                               ; preds = %53
  br label %70

70:                                               ; preds = %69
  br label %71

71:                                               ; preds = %70
  store i32 0, i32* %1, align 4
  br label %72

72:                                               ; preds = %76, %71
  %73 = load i32, i32* %1, align 4
  %74 = icmp slt i32 %73, 100
  br i1 %74, label %75, label %79

75:                                               ; preds = %72
  br label %76

76:                                               ; preds = %75
  %77 = load i32, i32* %1, align 4
  %78 = add nsw i32 %77, 1
  store i32 %78, i32* %1, align 4
  br label %72

79:                                               ; preds = %72
  store i32 0, i32* %1, align 4
  br label %80

80:                                               ; preds = %79
  br i1 true, label %81, label %82

81:                                               ; preds = %80
  store i32 68, i32* %1, align 4
  br label %82

82:                                               ; preds = %81, %80
  %83 = load i32, i32* %1, align 4
  %84 = call i32 @expect(i32 68, i32 %83)
  ret void
}

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
